<resources>
    <string name="app_name">Hotel Map</string>
    <string name="error">Error</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_register">Register</string>
    <string name="nav_about">About us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_language">Language</string>
    <string name="nav_currency">Currency</string>

    <string name="nav_slogan">Which hotel are you?</string>
    <string name="nav_email">office@hotelmap.bg</string>
    <string name="nav_hotel">Hotels</string>
    <string name="nav_sights">Sights</string>
    <string name="nav_shops">Shops</string>
    <string name="nav_events">Events</string>
    <string name="nav_all">All</string>
    <string name="nav_discount">Reserve with discount</string>
    <string name="nav_around">Around me</string>
    <string name="nav_scan">Scan</string>

    <string name="search_splash_screen">What would you like to see?</string>
    <string name="gps_enable">In order to use this feature you have to enable your GPS</string>

    <string name="around_dialog_ok">OK</string>
    <string name="around_dialog_cancel">Cancel</string>
    <string name="around_dialog_title">Search Around Me</string>

    <string name="gal_around_me">Around Me</string>
    <string name="gal_info">Information</string>
    <string name="gal_site">Website</string>
    <string name="gal_map">See On Map</string>
    <string name="gal_reserve">Reserve with discount</string>
    <string name="gal_desc_building">Building image</string>
    <string name="gal_desc_type">The type of item</string>
    <string name="gal_desc_currency">Currency</string>
    <string name="gal_phone">Ph.: %1$s</string>
    <string name="gal_row_call">Call button</string>

    <string name="spl_logo">Logo</string>
    <string name="spl_hotels">Hotels</string>
    <string name="spl_sights">Sights</string>
    <string name="spl_shops">Shops</string>
    <string name="spl_events">Events</string>
    <string name="spl_all">All</string>

    <string name="off_building_desc">Picture of the building</string>
    <string name="off_button">Learn More</string>
    <string name="off_link">Visit their website</string>
    <string name="off_period">%1$s d. %2$s:%3$s:%4$s</string>

    <string name="map_desc_around">Around me</string>
    <string name="map_desc_info">Information</string>
    <string name="map_desc_site">Official website</string>
    <string name="map_desc_reserve_discount">Reserve with discount</string>
    <string name="map_desc_phone">Ph.: %1$s</string>
    <string name="close">Close</string>
    <string name="map_info_stars">Number of stars</string>

    <string name="res_phone">Your phone</string>
    <string name="res_email">Your email</string>
    <string name="res_names">Your names</string>
    <string name="res_arrive">Arrival</string>
    <string name="res_depart">Departure</string>
    <string name="res_adults">Adults</string>
    <string name="res_children">Children</string>
    <string name="res_age">Age</string>

    <string name="desc_date">Click to choose date</string>
    <string name="terms_and_conditions">I am familiar with the terms and conditions</string>

    <string name="menu_search_destination">Destination</string>
    <string name="menu_search_people">Number of people</string>
    <string name="menu_search_search">Search</string>


    <string-array name="people_count">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="fragment_selection_array">
        <item>Map</item>
        <item>Gallery</item>
        <item>Offers</item>
    </string-array>

</resources>
