<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single" android:id="@+id/nav_search">
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_hotel_black_24dp"
            android:title="@string/nav_hotel" />
        <item
            android:id="@+id/nav_sights"
            android:icon="@drawable/ic_terrain_black_24dp"
            android:title="@string/nav_sights" />
        <item
            android:id="@+id/nav_shops"
            android:icon="@drawable/ic_local_mall_black_24dp"
            android:title="@string/nav_shops" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_golf_course_black_24dp"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_all_inclusive_black_24dp"
            android:title="@string/nav_all" />

    </group>

    <group android:checkableBehavior="none" android:id="@+id/nav_shortcuts">
        <item
            android:id="@+id/nav_around"
            android:icon="@drawable/ic_my_location_black_24dp"
            android:title="@string/nav_around" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_photo_camera_black_24dp"
            android:title="@string/nav_scan" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_about" />

    </group>


        <item
            android:checkable="false"
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/nav_register" />


</menu>
