<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:checkable="false"
        android:orderInCategory="96"
        android:id="@+id/nav_register"
        android:title="@string/nav_register"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_about"
        android:orderInCategory="97"
        android:title="@string/nav_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_language"
        android:orderInCategory="98"
        android:title="@string/nav_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_currency"
        android:orderInCategory="99"
        android:title="@string/nav_currency"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_settings"
        android:orderInCategory="100"
        android:title="@string/nav_settings"
        app:showAsAction="never" />


</menu>
