<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp">
<RelativeLayout
    android:id="@+id/gallery_btn_top"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_alignParentTop="true">

    <Button
        android:id="@+id/gallery_btn_around"
        android:text="@string/gal_around_me"
        android:background="#F3C546"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/gallery_btn_info"
        android:text="@string/gal_info"
        android:background="#FDB837"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/gallery_btn_around"
        android:layout_toEndOf="@+id/gallery_btn_around"/>
    <Button
        android:id="@+id/gallery_btn_site"
        android:text="@string/gal_site"
        android:background="#FCA428"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/gallery_btn_around"
        />
    <Button
        android:id="@+id/gallery_btn_map"
        android:text="@string/gal_map"
        android:background="#F4853D"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/gallery_btn_info"
        android:layout_toRightOf="@+id/gallery_btn_site"
        android:layout_toEndOf="@+id/gallery_btn_site"/>
</RelativeLayout>

    <Button
        android:id="@+id/gallery_btn_reserve"
        android:text="@string/gal_reserve"
        android:background="#E2321D"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/gallery_btn_top"/>

</RelativeLayout>