<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    android:padding="15dp">

    <ImageButton
        android:id="@+id/map_desc_btn_close"
        android:src="@drawable/ic_close"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/close" />

    <TextView
        android:id="@+id/map_desc_address"
        tools:text="City"
        android:textColor="#FFD700"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/map_desc_star"
            tools:text="4"
            android:textColor="#FFD700"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:drawableEnd="@drawable/ic_golden_star"
            android:drawableRight="@drawable/ic_golden_star" />

        <TextView
            android:id="@+id/map_desc_subtype"
            tools:text="Subtype"
            android:textColor="#000"
            android:textSize="20sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/map_desc_name"
        tools:text="Name"
        android:textColor="#000"
        android:textSize="20sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/map_desc_image"
            tools:src="@drawable/testbuilding"
            android:contentDescription="@string/gal_desc_building"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF0000"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="end"
            tools:ignore="RelativeOverlap">

            <ImageView
                android:id="@+id/map_desc_type"
                android:src="@drawable/ic_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gal_desc_type"/>

            <ImageView
                android:id="@+id/map_desc_currency"
                android:src="@drawable/ic_euro_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gal_desc_currency"/>

            <TextView
                android:id="@+id/map_desc_price"
                tools:text="40.00"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/map_desc_phone"
            tools:text="Tel: 0035952684060"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:background="#80000000"
            android:textColor="#fff"
            android:layout_gravity="bottom|end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <Button
        android:id="@+id/map_desc_btn_around"
        android:text="@string/map_desc_around"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:background="#F3C546"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/map_desc_btn_info"
        android:text="@string/map_desc_info"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:background="#FCA428"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/map_desc_btn_site"
        android:text="@string/map_desc_site"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:background="#F4853D"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/map_desc_btn_reserve"
        android:text="@string/map_desc_reserve_discount"
        android:textAllCaps="false"
        android:background="#E2321D"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>





</LinearLayout>